# MAI_OS

./: .gitignore  CMakeLists.txt  README.md  clustering.cpp
lab1/: CMakeLists.txt
lab1/include/: parent.h  utils.h
lab1/src/: child1.cpp  child2.cpp  main.cpp  parent.cpp  utils.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: kMeans.hpp
lab2/src/: kMeans.cpp  main.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp
